# 42CrunchConformanceScanAction

./: Dockerfile  action.sh  action.yaml  dockerfile  pyproject.toml  setup.py
cicd_python/: parser.py  report_service.py  runScan.py  sarif_service.py  scan_service.py
x42crunch_python_sdk/: parser.py  sarif_service.py  scan_service.py
x42crunch_python_sdk/cli/: xliic_scan.py
x42crunch_python_sdk/scripts/: xliic_scan.py
x42crunch_python_sdk/src/: parser.py  report_service.py  sarif_service.py  scan_service.py
