[tool.poetry]
name = "cicd-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cicd_python"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
docker = "^6.0.1"
arguments = "^76"
jsonpointer = "^2.3"
ruamel-yaml = "^0.17.21"

[tool.poetry.scripts]
runScan = "cicd_python.runScan:main"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
