[tool.poetry]
name = "x42crunch-python-sdk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "x42crunch_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
jsonpointer = "^2.3"
ruamel-yaml = "^0.17.21"
docker = "^6.0.1"
click = "^8.1.3"

[tool.poetry.scripts]
xliic_scan = "x42crunch_python_sdk.scripts.xliic_scan:_scan"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
